tests/base/valid/BoolReturn_Valid_1.whiley
import * from whiley.lang.*

bool pred():
    return false

void ::main(System.Console sys,[string] args):
    sys.out.println(pred())