tests/base/invalid/VarDecl_CompileFail_4.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
    x = y
    sys.out.println(Any.toString(x))
